# contingency-respondent-dsl

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  pyproject.toml
conformance/: README.md
conformance/tier-b/: blocking.json  conditioned-inhibition.json  conditioned-taste-aversion.json  contextual-extinction.json  contextual-fear-conditioning.json  counterconditioning.json  higher-order-conditioning.json  inhibition-of-delay.json  latent-extinction.json  latent-inhibition.json  mediated-conditioning.json  occasion-setting.json  overexpectation.json  overshadowing.json  pavlovian-pree.json  peak-procedure.json  reconsolidation-interference.json  reinstatement.json  renewal.json  retrospective-revaluation.json  sensory-preconditioning.json  spontaneous-recovery.json  stimulus-generalization.json  summation-retardation-test.json  super-conditioning.json  us-preexposure.json
docs/en/: README.md
docs/ja/: README.md
schema/: ast.schema.json  extension-registry.md  grammar.ebnf
spec/en/: architecture.md  design-philosophy.md  grammar.md  integration-with-core.md  theory.md
spec/en/tier-b-primitives/: _index.md  blocking.md  conditioned-inhibition.md  conditioned-taste-aversion.md  contextual-extinction.md  contextual-fear-conditioning.md  counterconditioning.md  higher-order-conditioning.md  inhibition-of-delay.md  latent-extinction.md  latent-inhibition.md  mediated-conditioning.md  occasion-setting.md  overexpectation.md  overshadowing.md  pavlovian-pree.md  peak-procedure.md  reconsolidation-interference.md  reinstatement.md  renewal.md  retrospective-revaluation.md  sensory-preconditioning.md  spontaneous-recovery.md  stimulus-generalization.md  summation-retardation-test.md  super-conditioning.md  us-preexposure.md
spec/ja/: architecture.md  design-philosophy.md  grammar.md  integration-with-core.md  theory.md
spec/ja/tier-b-primitives/: _index.md  blocking.md  conditioned-inhibition.md  conditioned-taste-aversion.md  contextual-extinction.md  contextual-fear-conditioning.md  counterconditioning.md  higher-order-conditioning.md  inhibition-of-delay.md  latent-extinction.md  latent-inhibition.md  mediated-conditioning.md  occasion-setting.md  overexpectation.md  overshadowing.md  pavlovian-pree.md  peak-procedure.md  reconsolidation-interference.md  reinstatement.md  renewal.md  retrospective-revaluation.md  sensory-preconditioning.md  spontaneous-recovery.md  stimulus-generalization.md  summation-retardation-test.md  super-conditioning.md  us-preexposure.md
src/contingency_respondent_dsl/: __init__.py  ast.py  parser.py  registry.py  serializer.py
tests/: test_ast.py  test_conformance.py  test_registry.py  test_scaffold.py  test_tier_b_parser.py
