[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contingency-respondent-dsl"
version = "0.0.0"
description = "Tier B Pavlovian (respondent) procedure extension for contingency-dsl. Provides 26 Pavlovian conditioning primitives (blocking, overshadowing, latent inhibition, renewal, reinstatement, etc.) that plug into the contingency-dsl Core via the Respondent extension point. Specification-only at this design checkpoint; a parser is a separate follow-on effort."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OperantKit contributors" },
]
license = { text = "MIT" }
keywords = [
  "behavior-analysis",
  "pavlovian-conditioning",
  "respondent-conditioning",
  "dsl",
  "contingency-dsl",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]

[project.urls]
"Parent DSL" = "https://github.com/operantkit/contingency-dsl"

[tool.setuptools]
# No Python package yet — this is a spec-only design checkpoint.
# A Python implementation (parser + registry) is a separate follow-on.
packages = []

